0.91
    * fixed core dump

0.90
    * first release