@@ -80,10 +80,16 @@ int main(int argc, char **argv) {
     gid_t gid;
     struct passwd *pwd;
     struct group *grp;
+    char *myname = argv[0];
 
     x = strlen(argv[0]);
     while (x!=0 && argv[0][x] != '/')   x--;
     if (x!=0) x++;
+
+    if (!strcmp(&argv[0][x], "lazybox")) {
+        argv = &argv[1];
+        x = 0;
+    }
 
     /* privileges we will drop to */
     uid=getuid();
@@ -109,7 +115,7 @@ int main(int argc, char **argv) {
     if (0) x=x;
 #include "elseif.h"
 
-    fprintf(stderr, "%s %0.2f can be called as:\n%s\n", argv[0], VERSION, ALLNAMES);
+    fprintf(stderr, "%s %0.2f can be called as:\n%s\n", myname, VERSION, ALLNAMES);
     return 1;
 }
 
